syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.gustavoteixeira.models";

message Void {}

message GameState {
  int32 client_position = 1;
  int32 server_position = 2;
}

service GameService {
  rpc rollDice(stream Void) returns(stream GameState);
}